tests/machine/x/zig/map_assign.error
Error on line 12: zig build error: exit status 1
/workspace/mochi/tests/machine/x/zig/map_assign.zig:12:41: error: expected type 'usize', found '*const [3:0]u8'
/usr/local/zig-0.12.1/lib/std/hash_map.zig:14:13: error: std.auto_hash.autoHash does not allow slices here ([]const u8) because the intent is unclear. Consider using std.StringHashMap for hashing the contents of []const u8. Alternatively, consider using std.auto_hash.hash or providing your own hash function instead.
/usr/local/zig-0.12.1/lib/std/hash_map.zig:55:39: note: called from here

11:     _ = scores.put("bob", @as(i32, @intCast(2))) catch unreachable;
12:     std.debug.print("{any}\n", .{scores["bob"]});
13: }
