tests/machine/x/zig/map_assign.zig
// Generated by Mochi compiler v0.10.28 on 2025-07-18T07:06:50Z
const std = @import("std");

fn handleError(err: anyerror) noreturn {
    std.debug.panic("{any}", .{err});
}

var scores: std.StringHashMap(i32) = undefined; // std.StringHashMap(i32)

pub fn main() void {
    scores = (blk0: { var _map0 = std.StringHashMap(i32).init(std.heap.page_allocator); _map0.put("alice", 1) catch |err| handleError(err); break :blk0 _map0; });
    _ = scores.put("bob", 2) catch |err| handleError(err);
    std.debug.print("{d}\n", .{scores["bob"]});
}
